IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3/29/10: Improved merging time when running isosurface with multiple threads;
multipled threads are now enabled by default, with the number set to the
number of processors on system (or value of IMOD_PROCESSORS), limited to 4.

3/29/10: In Etomo, added a checkbox for running tilt on the graphics card to
Tomogram Positioning.

3/27/10: Fixed machine stamps in MRC files to be follow CCP4 definition.

3/26/10: In Etomo, added a front panel button and some error checking for
Volume Flattening.

3/26/10: In Etomo, put a checkbox for the default GPU setting into Setup
Tomogram. 

3/26/10: In Etomo - find beads 3D, made binning as large as possible without
making the bead size too small.

3/26/10: In Etomo - Setup Tomogram fixed the montagesize call to prevent an
incorrect warning.

3/26/10: In Etomo fixed the field that goes with some of the file choosers,
which didn't work when it was updated directly.

3/26/10: IMOD_4-0-28  UI Tests work
3/23/10: 3dmod will load plugins from locations defined by IMOD_DIR, or default
install locations, if IMOD_PLUGIN_DIR is not defined.

3/19/10: IMOD_4-0-27
3/19/10: Made Bead Fixer reread log when etomo sends message from View/Edit
button, initialized max contour residual properly, updated disabling of
action buttons when tiltalign is run.

3/18/10: Fixed Sirtsetup conversion of first srec file being left.

3/18/10: In Etomo - bead erasing, added a Z shift for when fiducials where not
sorted into two surfaces in fine alignment.

3/18/10: Fixed Etomo not enabling parallel processing from internal setting.

3/18/10: Finished fixing the preferences file (.etomo).

3/17/10: Fixed slicer crash with -180 Z rotation and offset image.

3/14/10: IMOD_4-0-26
3/14/10: Changes to Ctfplotter: it now shows a table of results that will be 
saved to file and that can be read in from a previous session.  Tool buttons